# pcqvp-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  docker-compose.globaleaks.yml  docker-compose.prod.yml  docker-compose.yml  feature-client.md  note.md  tests-report-v2.md  tests-report.md
backend/: =0.1.9  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  004_create_compte_administratif_tables.py  005_add_cross_cutting_features.py  006_create_editorial_tables.py  007_add_banner_image.py  008_add_audit_logs_and_collectivity_documents.py
backend/app/: main.py  seed.py
backend/app/core/: config.py  security.py
backend/app/middleware/: visit_tracker.py
backend/app/models/: __init__.py  audit_log.py  collectivity_document.py  compte_administratif.py  editorial.py  geography.py  site_config.py  user.py
backend/app/routers/: admin_analytics.py  admin_collectivity_documents.py  admin_comptes.py  admin_editorial.py  admin_geography.py  admin_newsletter.py  auth.py  geography.py  newsletter.py  public_comptes.py  public_config.py  public_editorial.py  search.py  upload.py  users.py
backend/app/schemas/: auth.py  collectivity_document.py  compte_administratif.py  editorial.py  geography.py  public.py
backend/app/services/: account_service.py  (+9 more)
backend/scripts/: seed_geography.py
backend/tests/: test_admin_comptes_delete.py  test_analytics.py  test_collectivity_documents.py  test_comptes.py  test_editor_image_upload.py  test_search.py  test_templates.py  test_upload_document.py
(+340 files in other folders)
